# Mamba_GAZE

./: .gitignore  README.md  build_meshmamba_mapping.py  environment.server.yml  pyproject.toml  run_meshmamba_gaze.py
configs/: lab_graphicon_server.env
data/: README.md
mamba_gaze/: __init__.py  camera_utils.py  io_utils.py  mesh_ops.py  metrics.py  name_mapping.py  pipeline.py
scripts/: aggregate_sweeps_server.sh  build_mapping_server.sh  build_ubunt_test1_bundle.sh  create_conda_env.sh  doctor_server_paths.sh  init_test1_local_config.sh  install_miniconda_local.sh  list_models_server.sh  render_model_preview.sh  run_aquarium_server.sh  run_model_server.sh  sweep_aquarium_server.sh  sweep_model_list_server.sh  sweep_model_server.sh
tools/: aggregate_sweep_results.py  build_self_contained_workspace.py  describe_non_mvp_json.py  list_models.py  render_model_preview.py  summarize_gaze_csv.py  sweep_model.py  sweep_model_list.py
